# QuickData

./: LICENSE  QuickData.cabal  README.md  config  config.json  config.qd  datetime.nix  default.nix  release.nix  shell.nix  stack.yaml
data/: problems.txt
lib/QuickData/: Internal.hs  Main.hs  Parse.hs  Randomize.hs  Sql.hs
src/: Main.hs
src/QuickData/: Generate.hs  Randomize.hs  Sql.hs  Types.hs
src/quickdata/: Generate.hs
