name:                QuickData
version:             0.1.0.0
synopsis:            Quick Dummy Data for SQL
-- description:
--homepage:            https://github.com/githubuser/QuickData#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Stefanic
maintainer:          rstefanic72@gmail.com
copyright:           2018 Robert Stefanic
category:            Database
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable QuickData
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       QuickData.Randomize
                       QuickData.Types
  build-depends:       base >= 4.7 && < 5
                     , dhall
                     , random
                     , text
                     , bytestring
                     , datetime
