name:                QuickData
version:             0.1.0.0
synopsis:            Quick Dummy Data for SQL
license:             BSD3
license-file:        LICENSE
author:              Robert Stefanic (rstefanic72@gmail.com)
maintainer:          Robert Stefanic (rstefanic72@gmail.com)
copyright:           2018 Robert Stefanic
category:            Database
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

Library
  hs-source-dirs:    lib
  default-language:  Haskell2010
  Ghc-options:       -Wall

  exposed-modules:       
    QuickData.Internal
    QuickData.Main
    QuickData.Parse
    QuickData.Randomize
    QuickData.Sql

  build-depends:
    aeson,
    base >=4.2 && <4.9,
    bytestring,
    datetime,
    either == 4.4.1.1,
    hashmap,
    mtl,
    optparse-applicative,
    random,
    semigroups,
    text,
    transformers


Executable QuickData
  Main-is:          Main.hs
  Hs-source-dirs:   src
  Ghc-options:      -Wall -threaded 
  Default-language: Haskell2010

  Build-depends:
    base >= 4 && < 5,
    QuickData
